--- a/Forecasting_Principles_Notes.ipynb
+++ b/Forecasting_Principles_Notes.ipynb
@@ -1,9 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "83bf7190",
+   "metadata": {},
+   "source": [
+    "Forecasting is about predicting the future as accurately as possible, given the information we have \n",
+    "\n",
+    "Things that make forecasting more accurate: \n",
+    "- Having a good understanding of contributing factors \n",
+    "- Availability of data. More historic data = better \n",
+    "- Likelihood that things will continue to behave similarly \n",
+    "- Whether forecasts are very dependent on consumer behavior\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff078aff",
+   "id": "7ed25ea1",
    "metadata": {},
    "outputs": [],
    "source": []
