Add notes about indicator variables.

--- a/Forecasting_Principles_Notes.ipynb
+++ b/Forecasting_Principles_Notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "34e50ed4",
+   "id": "82dd3536",
    "metadata": {},
    "source": [
     "# Notes from Forecasting: Principles and Practice (Hyndman and Athanasopoulos)"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c2e852",
+   "id": "f53eda72",
    "metadata": {},
    "source": [
     "### Time Series Forecasting: Explanatory and Time Series Models \n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e72aeb",
+   "id": "9e33df2c",
    "metadata": {},
    "source": [
     "### Steps in a Forecasting Task \n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eead2dc",
+   "id": "b52021b3",
    "metadata": {},
    "source": [
     "### Variation in Forecasting \n",
@@ -98,13 +98,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9371151",
+   "id": "4c8fd895",
    "metadata": {},
    "source": [
     "### Time Series Patterns \n",
     "- **Trends** refer to a long-term increase or decrease in the data (it does not have to be linear) \n",
     "- **Seasonality** is when a time series is affected by seasonal factors such as time of day, month of year, etc. \n",
     "- **Cyclic**: A cycle occurs when the data exibit rises and falls that *are not* of a fixed frequency \n",
+    "\n",
+    "\n",
+    "- Moving averages are used to estimate the trend cycle, from which seasonality is determined\n",
     "\n",
     "If fluctuations are *not of fixed frequency* they are cyclic.   \n",
     "If fluctiations *are of fixed frequency* they are seasonal. \n",
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ad4516b",
+   "id": "2049b6fc",
    "metadata": {},
    "source": [
     "### Seasonal Sub-series Plots\n",
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7189c5aa",
+   "id": "e281f6ac",
    "metadata": {},
    "source": [
     "### Correlation \n",
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "238b5eb4",
+   "id": "f05217fe",
    "metadata": {},
    "source": [
     "### Autocorrelation \n",
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4782bda",
+   "id": "6629364e",
    "metadata": {},
    "source": [
     "### Scatterplot Matrices \n",
@@ -154,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99771a1b",
+   "id": "b41b30d9",
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de82718",
+   "id": "8cbd3aa8",
    "metadata": {},
    "source": [
     "### Transformations and adjustments\n",
@@ -225,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9dd9eb2",
+   "id": "57ae1402",
    "metadata": {},
    "source": [
     "### Simple Forecating Methods\n",
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c1394b",
+   "id": "64fa010f",
    "metadata": {},
    "source": [
     "### Residuals \n",
@@ -259,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e75b8c",
+   "id": "b909a6df",
    "metadata": {},
    "source": [
     "### Residual Diagnostics \n",
@@ -268,7 +271,7 @@
     "2. The innovation residuals have zero mean. If they do not have zero mean, the forecasting model is biased and needs to be shifted (subtract the mean from the forecasts to shift the forecast). \n",
     "3. The residuals have constant variance over the range of data (known as \"homoscedasticity\"). Check this by plotting the residuals over time. \n",
     "4. The residuals are normally distributed (i.e. gausian distribution centered at zero mean indicating randomness). \n",
-    "\n",
+    "5. Plot the residuals against the predictors (both predictors that are used in the model, and predictors that were not used in the model). There should be no relationship. If there is, the relationship may be non-linear. \n",
     "\n",
     "Checking these properties is important to ensure the forecasting model is using all of the available information, but it is not a good way to select a forecasting method.\n",
     "\n",
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20cad7d",
+   "id": "15b06e7f",
    "metadata": {},
    "source": [
     "### Forecast Distributions / Prediction Intervals \n",
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23269331",
+   "id": "d02a305a",
    "metadata": {},
    "source": [
     "### Forecasting with Decomposition \n",
@@ -303,54 +306,91 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0448533",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83b79864",
+   "id": "dfa833ba",
    "metadata": {},
    "source": [
+    "### Accuracy of Forecasts \n",
+    "The accuracy of a forecast can only be determined by considering how well a model performs on new data that was not used when fitting the model. \n",
     "\n",
+    "**Training and Test Sets**\n",
+    "- The test set is usually about 20% of the total sample size \n",
+    "- Test set should be ideally as large as the max forecast horizion \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "**Forecast error** is the difference between observed and forecasted. Any \"error\" can be attributed to the unpredicted part of the forecast. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb53c77c",
+   "id": "a402033d",
+   "metadata": {},
+   "source": [
+    "### Time Series Regression Models\n",
+    "Forecast a time series of interest, assuming it has a relationship with another time series \n",
+    "Single linear regression is just of form y=mx+b\n",
+    "\n",
+    "**Multiple linear regression**\n",
+    "- We assume that a linear model is a reasonable approximate to reality \n",
+    "\n",
+    "y=(m_1)(x_1) + (m_2)(x_2) + (m_3)(x_3) + B  \n",
+    "where:  \n",
+    "**x_n** are the predictor variables   \n",
+    "**m_n** measure the effect of the predictor variable after taking into account all of the other predictor variables (called the *marginal effect*) \n",
+    "\n",
+    "**Least Squares Estimation**: \n",
+    "- Choose coefficients for the regression model that minimize the sum of the squared errors \n",
+    "- When looking at the output of a LSE model, there will be a **coefficient** and an **estimated standard error**\n",
+    "- The standard error gives an estimate of the uncertainty of the coefficient value. \n",
+    "\n",
+    "**Goodness-of-fit and R^2**\n",
+    "- Square of the correlation between the observed values and predicted values \n",
+    "- Defined 1 - [(sum of the squared error of the forecast) divided by the (sum of the total variation in Y (squared error from the mean))]\n",
+    "\n",
+    "**R^s is often mis-used**\n",
+    "- Adding extra predictors will never decrease R^2, and can lead to over-fitting the model \n",
+    "- There are no rules for what a good R^2 value is for a given model \n",
+    "- \"Typical\" R^2 values depend on the type of data used \n",
+    "- **Using a model's forecast performance is much better than calculating R^2 value on training data.\"**\n",
+    "- An R^2 value of 0.78 means the model explains 78% of the variation in the data \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cf385a5",
+   "metadata": {},
+   "source": [
+    "### Useful predictors in time series data \n",
+    "- **Trend**: A linear trend often works \n",
+    "\n",
+    "- **Dummy variables (indicator variables)**: \n",
+    "- These can take the place of boolean values -- they can be set to a value of 0 or 1 to represent things like \"is it a holiday today?\".\n",
+    "- They can still be handled in the framework of regression models, and can often be used to account for outlier data. \n",
+    "- They can handle seasonality, and represent things such as \"day of the week\". \n",
+    "- There should be 1 less dummy variable than number of options, so with \"days of the week\", there should be 6 dummy variables. That's because the n_th category is captured by the intercept \n",
+    "- The dummy variable's effect is then measured on the omitted variable. For example: if you omit \"Sunday\" from the day of week list and represent it as the intercept\n",
+    "- Each variable is measured as its effect *relative* to the variable that is represented by the intercept. So, if Sunday is left as the intercept, all other variables are measured as their impact relative to Sunday "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be28fded",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e930f53a",
+   "id": "1d903a6e",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "06808c00",
+   "id": "d5ef36b1",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "757c5066",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "52560d2c",
+   "id": "718d2fae",
    "metadata": {},
    "source": []
   }
