--- a/Forecasting_Principles_Notes.ipynb
+++ b/Forecasting_Principles_Notes.ipynb
@@ -86,6 +86,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42a69365",
+   "metadata": {},
+   "source": [
+    "### Selecting Predictors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a3921fd",
+   "metadata": {},
+   "source": [
+    "- **NOT RECOMMENDED** Plotting the forecast variable against a particular predictor, and if there is no noticeable relationship, drop that predictor from the model.  \n",
+    "^ This is not recommended becuase it is not always possible to see the relationship from a scatterplot, especially when the effects of other predictors have not been acounted for \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b52021b3",
    "metadata": {},
    "source": [
@@ -343,9 +360,9 @@
     "\n",
     "**Goodness-of-fit and R^2**\n",
     "- Square of the correlation between the observed values and predicted values \n",
-    "- Defined 1 - [(sum of the squared error of the forecast) divided by the (sum of the total variation in Y (squared error from the mean))]\n",
+    "- Defined 1 - [(sum of the squared error of the forecast) divided by (squared difference of **observation** from the mean)]\n",
     "\n",
-    "**R^s is often mis-used**\n",
+    "**R^2 is often mis-used**\n",
     "- Adding extra predictors will never decrease R^2, and can lead to over-fitting the model \n",
     "- There are no rules for what a good R^2 value is for a given model \n",
     "- \"Typical\" R^2 values depend on the type of data used \n",
